fix(style/home): tagline on smaller screen heights

--- a/_sass/jekyll-theme-eva.scss
+++ b/_sass/jekyll-theme-eva.scss
@@ -203,7 +203,7 @@ body > main {
             word-spacing: unset;
             width: auto;
             height: auto;
-            top: 101px;
+            top: 10px;
             left: 0;
         }
     }
